# conjak

./: .typstignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  build  docs.typ  example.typ  make_doc  readme.md  shell.nix  typst.toml
.github/workflows/: build.yml  release.yml
conjak-numbers/: Cargo.toml
conjak-numbers/src/: chinese_case.rs  chinese_characters.rs  chinese_count_method.rs  lib.rs
conjak-numbers/src/number_to_chinese/: functions.rs  functions_test.rs  mod.rs  naive.rs  number_to_chinese_error.rs  traits.rs
conjak-numbers/tests/: number_to_chinese.rs
src/: cjk_num_format.wasm  conjak.wasm  lib.rs  lib.typ  number_to_text.rs
src/models/: lunar.rs  mod.rs  sep_10000.rs
